--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</header>
 			<nav>
 				<p>
-					<a href="/">Home</a>
+					<a href="/">Afrikasvensk</a>
 				</p>
 				<p>
 					<a href="/contact">Contact</a>
