--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</header>
 			<nav>
 				<p>
-					<a href="/">Afrikasvenskarnas riksförbund</a>
+					<a href="/">Afrikasvenskarnas riksförbund entrar riksdagen</a>
 				</p>
 				<p>
 					<a href="/contact">Contact</a>
