Grundläggande struktur för huvud, fot osv
Signed-off-by: Niffe <c849365@rmqkr.net>

--- a/index.html
+++ b/index.html
@@ -16,31 +16,62 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+		<link rel="stylesheet" type="text/css" href="reset.css">
+		<link rel="stylesheet" type="text/css" href="jormungandr.css">
 	</head>
 
 	<body>
 		<div>
-			<header>
-				<h1>index</h1>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Afrikasvenskarnas riksförbund entrar riksdagen</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
-			<div>
-
+			<div class="header">
+				<div class="container">
+					<h1>index</h1>
+				</div>
+			</div>
+			<div class="nav">
+				<div class="container">
+					<p>
+						<a href="/contact">Contact</a>
+					</p>
+				</div>
 			</div>
 
-			<footer>
-				<p>
-					&copy; Copyright  by ibbe
-				</p>
-			</footer>
+			<div class="main">
+				<div class="container">
+					<p>
+						<a href="/">Afrikasvenskarnas riksförbund entrar riksdagen</a>
+					</p>
+					<img src="images/image1.jpg">
+					<p>					
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sodales urna nec lorem rutrum fermentum. Integer consectetur tortor a est euismod euismod. Sed ut nunc eu est auctor congue. Aliquam tempor facilisis augue, eleifend laoreet dolor vehicula et. Integer ut ipsum tellus, vitae iaculis quam. Nam nec sem diam. Integer accumsan erat adipiscing metus malesuada gravida. Curabitur scelerisque viverra felis, et viverra dolor auctor vel. In hac habitasse platea dictumst. Donec id mauris felis. Praesent mattis congue felis, eget interdum felis laoreet ut. Maecenas et nisl felis. Cras convallis vehicula pharetra. Phasellus semper risus in tortor pharetra consectetur.
+					</p>
+					<img src="images/image2.jpg">
+					<p>	
+						Suspendisse potenti. Proin rhoncus lobortis tortor quis consectetur. Ut in enim quis felis dignissim porttitor. Curabitur libero tortor, porta eu consectetur at, sollicitudin a justo. Ut viverra nunc eget ligula pretium venenatis. Nunc nec arcu tellus, in ultrices massa. Vestibulum sapien lacus, consequat in hendrerit fermentum, euismod mattis ligula. Sed imperdiet lobortis gravida. Phasellus pulvinar felis pellentesque nisi fringilla lacinia. Cras libero dolor, suscipit sed tincidunt eget, commodo at sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean vulputate accumsan posuere. Integer erat felis, eleifend eu tristique in, sollicitudin a ligula.
+					</p>
+					
+					<p>
+						Morbi aliquet gravida pulvinar. Etiam sed dapibus leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ultricies pulvinar tristique. Nulla fringilla lectus vitae lorem scelerisque ac rutrum nulla mollis. Praesent in tristique enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec at arcu sit amet lacus convallis ultrices. Maecenas in tellus urna. Pellentesque vitae semper metus.
+					</p>
+					<img src="images/image3.jpg">
+					<img src="images/image4.jpg">
+					<img src="images/image5.jpg">					
+					<p>
+						Phasellus lobortis libero sit amet purus imperdiet auctor. Vestibulum eu tortor elit, eu facilisis neque. Vivamus lobortis elit eget purus viverra in bibendum tortor sagittis. Nullam vitae sapien elit. Integer tortor orci, auctor et placerat sed, pretium vel massa. Quisque sed tellus suscipit turpis tempus lobortis. Maecenas dui lacus, convallis quis ornare nec, posuere sit amet risus. In id massa tortor, vitae laoreet felis. Phasellus molestie nunc dictum erat sollicitudin vulputate ut eget nunc. Vestibulum nec nunc gravida turpis porttitor tempus pellentesque eu elit. Etiam nunc augue, ultrices ac interdum sed, adipiscing sed odio. Fusce tristique sem vel leo volutpat ut lobortis nisi hendrerit. Cras commodo interdum elit laoreet malesuada.
+					</p>
+
+					<p>
+						Morbi at augue nibh, ac rutrum leo. Proin eu sapien in justo congue pellentesque. Suspendisse eu quam ut nunc rhoncus vulputate. Praesent enim velit, commodo faucibus molestie feugiat, imperdiet ac mi. Pellentesque eu orci a tortor ultrices hendrerit. Ut in tellus nisi, venenatis eleifend elit. Suspendisse a mi quis felis pulvinar sodales id eu arcu.
+					</p>
+				</div>
+			</div>
+
+			<div class="footer">
+				<div class="container">
+					<p>
+						&copy; Copyright  by ibbe
+					</p>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
